# cartographer_ros

./: .gitignore  .rosinstall  .rosinstall.bak  README.md
cartographer/: CMakeLists.txt  cartographer-config.cmake.in
cartographer/cartographer/: common-源码分析.md  io-源码分析.md  kalman_filter-源码解析.md  mapping源码分析.md  sensor-源码分析.md  transform-源码分析.md
cartographer/cartographer/common/: blocking_queue.h  blocking_queue_test.cc  config.h.cmake  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  fixed_ratio_sampler_test.cc  histogram.cc  histogram.h  histogram_le_test.cc  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  lua_parameter_dictionary_test.cc  make_unique.h  make_unique_test.cc  math.h  math_test.cc  mutex.h  mutex.md  port.h  port_le_test.cpp  rate_timer.h  rate_timer_test.cc  thread_pool.cc  thread_pool.h  thread_pool.md  time.cc  time.h
cartographer/cartographer/ground_truth/: autogenerate_ground_truth_main.cc  compute_relations_metrics_main.cc  relations_text_file.cc  relations_text_file.h
cartographer/cartographer/io/: cairo_types.h  coloring_points_processor.cc  coloring_points_processor.h  counting_points_processor.cc  counting_points_processor.h  file_writer.cc  file_writer.h  fixed_ratio_sampling_points_processor.cc  fixed_ratio_sampling_points_processor.h  intensity_to_color_points_processor.h  min_max_range_filtering_points_processor.cc  min_max_range_filtering_points_processor.h  null_points_processor.h  outlier_removing_points_processor.cc  outlier_removing_points_processor.h  pcd_writing_points_processor.cc  pcd_writing_points_processor.h  ply_writing_points_processor.cc  ply_writing_points_processor.h  points_batch.cc  points_batch.h  points_processor.h  points_processor_pipeline_builder.cc  points_processor_pipeline_builder.h  proto_stream.cc  proto_stream_test.cc  xray_points_processor.cc  xray_points_processor.h
cartographer/cartographer/kalman_filter/: gaussian_distribution.h  gaussian_distribution_test.cc  pose_tracker.cc  pose_tracker.h  pose_tracker_test.cc  unscented_kalman_filter.h  unscented_kalman_filter_test.cc  unscented_kalman_filter_test.md
cartographer/cartographer/mapping/: collated_trajectory_builder.cc  collated_trajectory_builder.h  detect_floors.cc  detect_floors.h  global_trajectory_builder_interface.h  id.h  imu_tracker.cc  imu_tracker.h  map_builder.cc  map_builder.h  odometry_state_tracker.h  pose_graph_trimmer.cc  pose_graph_trimmer.h  pose_graph_trimmer_test.cc  probability_values.cc  probability_values.h  probability_values.md  probability_values_test.cc  sparse_pose_graph.cc  sparse_pose_graph.h  submaps.h  submaps_test.cc  trajectory_builder.cc  trajectory_builder.h  trajectory_connectivity.cc  trajectory_connectivity.h  trajectory_connectivity_test.cc  trajectory_node.h
cartographer/cartographer/mapping/sparse_pose_graph/: constraint_builder.cc  constraint_builder.h  optimization_problem_options.cc  optimization_problem_options.h
cartographer/cartographer/mapping_2d/: global_trajectory_builder.md  local_trajectory_builder.cc  local_trajectory_builder.h  local_trajectory_builder.md  local_trajectory_builder_options.cc  local_trajectory_builder_options.h  map_limits.h  map_limits_test.cc  probability_grid.h  probability_grid_test.cc  range_data_inserter.cc  range_data_inserter.h  range_data_inserter_test.cc  ray_casting.cc  ray_casting.h  ray_casting.md  sparse_pose_graph.cc  sparse_pose_graph.h  sparse_pose_graph.md  submaps.cc  submaps.h  submaps.md  submaps_test.cc  xy_index.h  xy_index_test.cc
cartographer/cartographer/mapping_2d/scan_matching/: ceres.md  ceres_scan_matcher.cc  ceres_scan_matcher.h  ceres_scan_matcher_test.cc  correlative_scan_matcher.cc  correlative_scan_matcher.h  correlative_scan_matcher.md  correlative_scan_matcher_test.cc  fast_correlative_scan_matcher.cc  fast_correlative_scan_matcher.h  fast_correlative_scan_matcher_test.cc  occupied_space_cost_functor.h  real_time_correlative_scan_matcher.cc  real_time_correlative_scan_matcher.h  real_time_correlative_scan_matcher_test.cc  rotation_delta_cost_functor.h  translation_delta_cost_functor.h  分支定界闭环检测的原理和实现.md
cartographer/cartographer/mapping_2d/sparse_pose_graph/: constraint_builder.cc  constraint_builder.h  optimization_problem.cc  optimization_problem.h  optimization_problem.md  spa_cost_function.h
cartographer/cartographer/mapping_3d/: acceleration_cost_function.h  ceres_pose.cc  ceres_pose.h  ceres_pose.md  hybrid_grid.h  imu_integration.cc  imu_integration.h  kalman_local_trajectory_builder.cc  kalman_local_trajectory_builder.h  local_trajectory_builder.cc  local_trajectory_builder.h  local_trajectory_builder_interface.h  motion_filter.cc  motion_filter.h  motion_filter_test.cc  optimizing_local_trajectory_builder.cc  optimizing_local_trajectory_builder.h  range_data_inserter.cc  range_data_inserter.h  rotation_cost_function.h  sparse_pose_graph.cc  sparse_pose_graph.h  submaps-3d.md  submaps.cc  submaps.h  translation_cost_function.h
cartographer/cartographer/mapping_3d/scan_matching/: IMU预积分原理.md  SLAM矩阵.md  (+18 more)
cartographer/cartographer/sensor/: collator.cc  collator.h  collator_test.cc  compressed_point_cloud.cc  compressed_point_cloud.h  compressed_point_cloud_test.cc  configuration.cc  configuration.h  data.h  ordered_multi_queue.cc  ordered_multi_queue.h  ordered_multi_queue_test.cc  point_cloud.cc  point_cloud.h  point_cloud_test.cc  range_data.cc  range_data.h  range_data_test.cc  voxel_filter.cc  voxel_filter.h  voxel_filter_test.cc
cartographer/cartographer/transform/: rigid_transform.cc  rigid_transform.h  rigid_transform_le2_grid2_test.cc  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h  transform_interpolation_buffer_test.cc  transform_test.cc
cartographer/configuration_files/: sparse_pose_graph.lua
cartographer_ros/cartographer_ros/: CMakeLists.txt
cartographer_ros/cartographer_ros/cartographer_ros/: assets_writer.cc  color.cc  main.md  msg_conversion.cc  node.cc  node_main.cc  occupancy_grid.cc  offline_node_main.cc  ros_log_sink.cc  sensor_bridge.cc  time_conversion.cc
(+5 files in other folders)
